Adjusted mobile layout in MT page to prevent overflow

--- a/victorstantondotcom/src/assets/pages/MovementTherapy.css
+++ b/victorstantondotcom/src/assets/pages/MovementTherapy.css
@@ -3,7 +3,7 @@
     padding: 16vh 0 0 0;
     text-align: center;
     /* outline: 3px red solid; */
-      font-size: 10vh;
+      font-size: 8vh;
       color: #1c5460;
 }
 
@@ -13,7 +13,7 @@
 }
 
 #mt-pic {
-    width: 40vh;
+    width: 38vh;
     height: auto;
     outline: 0.5vh #60BFC4 solid;
     border-radius: 30%;
@@ -24,7 +24,7 @@
 }
 
 .mt-text {
-    width: 50vh;
+    width: 40vh;
     height: auto;
     margin: 5vh auto 5vh 5vh ;
     line-height: 1.4;
@@ -42,12 +42,14 @@
 @media (max-width: 820px) {
     .mt-main {
     display: block;
+    /* outline: red 1px solid; */
  
     }
     #main-tag {
     padding-top: 15vh;
     width: 70%;
     padding-left: 30%;
+    /* outline: red 1px solid; */
     }
     #mt-pic {
     height: auto;
